[package]
name = "open-commerce-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
actix-web = "=4.0.1"
actix-http = "=3.0.4"