[package]
name = "open_commerce_backend"
version = "0.1.0"
authors = ["Mier Rashid <uhakdt@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "open_commerce_backend"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
